--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Portfolio - Home</title>
-    <link href="computer.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
+    <link href="computer.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> <!--Links to different stylesheets depending on screen size-->
     <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
     <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
 </head>
@@ -14,7 +14,7 @@
         <header>
             <h1>Nicholas's Portfolio</h1>
             <h4>~Home~</h4>
-            <nav>
+            <nav> <!--Establish a navigation bar at the top of the website-->
                 <a class="button" href="aboutme.html">About Me</a>
                 <a class="button" href="projects.html">Projects</a>
                 <a class="button" href="contact.html">Contact Me</a>
@@ -28,11 +28,12 @@
         </article>
 
         <footer>
-            <nav>
+            <nav> <!--Establish a navigation bar at the bottom of the website-->
                 <a class="button" href="aboutme.html">About Me</a>
                 <a class="button" href="projects.html">Projects</a>
                 <a class="button" href="contact.html">Contact Me</a>
             </nav>
+            <h4><br>Copyright @ Nicholas Skoric, 2025</h4>
         </footer>
     </div>
 </body>
