--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Portfolio - Contact Me</title>
-    <link href="computer.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)">
+    <link href="computer.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> <!--Links to different stylesheets depending on screen size-->
     <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
     <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
 </head>
@@ -14,7 +14,7 @@
         <header>
             <h1>Nicholas's Portfolio</h1>
             <h4>~Contact Me~</h4>
-            <nav>
+            <nav> <!--Establish a navigation bar at the top of the website-->
                 <a class="button" href="index.html">Home</a>
                 <a class="button" href="aboutme.html">About Me</a>
                 <a class="button" href="projects.html">Projects</a>
@@ -23,16 +23,55 @@
         </header>
         
         <article>
-            <section><p>There is text here</p></section>
+            <section><form action="mailto:nicholas.skoric@ontariotechu.net?subject=Web and Script Assignment 1 - Contact Form" enctype="text/plain"
+            method="post" name="Contact Nicholas Skoric"> <!--Establish a form whose action is to send me an email containing input from user-->
+            <p>
+                <label for="First Name">First Name:</label>
+                <input type="text" name="First Name" size="40" placeholder="Enter your first name" required>
+            </p>
+            <p>
+                <label for="Last Name">Last Name:</label>
+                <input type="text" name="Last Name" size="40" placeholder="Enter your last name" required>
+            </p>
+            <p>
+                <label for="Email">Email:</label>
+                <input type="email" name="Email" size="40" placeholder="Enter your email address" required>
+            </p>
+            <p>
+                <label for="Comment">Comment:</label>
+                <textarea name="Comment" cols="60" rows="8">
+                    </textarea>
+            </p>
+            <p> <!--Probably will remove this before submission-->
+                <input type="checkbox" name="maillist">
+                <label for="maillist"> I consent to regular emails from Nicholas</label>
+            </p>
+            <p>
+                <label for="where">How did you hear about me?</label>
+                <select name="where">
+                    <option value="Default">~Select One~</option>
+                    <option value="Social">Spotted around the campus</option>
+                    <option value="Mouth">Word of Mouth</option>
+                    <option value="Approach">I must mark this project, and your name is on my list</option>
+                    <option value="Other">Other</option>
+
+                </select>
+            </p>
+            <p> <!--Add submit and courtesy reset button-->
+                <input type="reset" value="Reset">
+                <input type="submit" value="Submit">
+            </p>
+        </form></section>
             <section><h5>wow so much text and body</h5></section>
         </article>
 
         <footer>
-            <nav>
+            <nav> <!--Establish a navigation bar at the top of the website-->
                 <a class="button" href="index.html">Home</a>
                 <a class="button" href="aboutme.html">About Me</a>
                 <a class="button" href="projects.html">Projects</a>
             </nav>
+            <h4><br>Copyright @ Nicholas Skoric, 2025</h4>
         </footer>
     </div>
 </body>
