--- a/projects.html
+++ b/projects.html
@@ -8,7 +8,7 @@
     <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
     <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
 </head>
-<!-- --------------------------------Division Between Head and Body---------------------------------->
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Division Between Head and Body~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <body>
     <div id="wrapper">
         <header>
@@ -23,10 +23,16 @@
         </header>
         
         <article>
-            <section><p>There is text here</p></section>
-            <section><h5>wow so much text and body</h5></section>
-        </article>
+            <section><h4>SHOOP, Object Oriented Programing in action</h4><p>She's on a bar hoppin' spree back in Sault Ste Marie</p><br></section>
 
+            <div class="sectionB"><h4>Gru - An Icon of Leadership</h4><p>Because of me she's now a fallen staaeeerr</p><br></div>
+
+            <section><h4>Project Three</h4><p>She could have been true, but I left her in the Sault</p><br></section>
+
+            <div class="sectionB"><h4>Stan Rogers, Seldom Remembered</h4><p>And I travelled North upon the A.C.R.</p><br></div>
+        </article>
+        
+        <br><br><br>
         <footer>
             <nav> <!--Establish a navigation bar at the top of the website-->
                 <a class="button" href="index.html">Home</a>
