--- a/aboutme.html
+++ b/aboutme.html
@@ -8,7 +8,7 @@
     <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
     <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
 </head>
-<!-- --------------------------------Division Between Head and Body---------------------------------->
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Division Between Head and Body~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <body>
     <div id="wrapper">
         <header>
@@ -27,6 +27,7 @@
             <section><h5>wow so much text and body</h5></section>
         </article>
 
+        <br><br><br>
         <footer>
             <nav> <!--Establish a navigation bar at the top of the website-->
                 <a class="button" href="index.html">Home</a>
