--- a/contact.html
+++ b/contact.html
@@ -8,7 +8,7 @@
     <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
     <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
 </head>
-<!-- --------------------------------Division Between Head and Body---------------------------------->
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Division Between Head and Body~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <body>
     <div id="wrapper">
         <header>
@@ -26,6 +26,7 @@
             <section><form action="mailto:nicholas.skoric@ontariotechu.net?subject=Web and Script Assignment 1 - Contact Form" enctype="text/plain"
             method="post" name="Contact Nicholas Skoric"> <!--Establish a form whose action is to send me an email containing input from user-->
             <p>
+                <br>
                 <label for="First Name">First Name:</label>
                 <input type="text" name="First Name" size="40" placeholder="Enter your first name" required>
             </p>
@@ -38,9 +39,13 @@
                 <input type="email" name="Email" size="40" placeholder="Enter your email address" required>
             </p>
             <p>
+                <label for="Phone">Phone Number:</label>
+                <input type="tel" name="Phone" size="40" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="(xxx-xxx-xxxx)"> <!-- the pattern field was taken from https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/input/tel-->
+
+            </p>
+            <p>
                 <label for="Comment">Comment:</label>
-                <textarea name="Comment" cols="60" rows="8">
-                    </textarea>
+                <textarea name="Comment" cols="60" rows="8"></textarea>
             </p>
             <p> <!--Probably will remove this before submission-->
                 <input type="checkbox" name="maillist">
@@ -62,9 +67,10 @@
                 <input type="submit" value="Submit">
             </p>
         </form></section>
-            <section><h5>wow so much text and body</h5></section>
+            <section><h5>Thank you for your comment! I'll be in touch with you shortly.</h5></section>
         </article>
 
+        <br><br><br><br>
         <footer>
             <nav> <!--Establish a navigation bar at the top of the website-->
                 <a class="button" href="index.html">Home</a>
