--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
     <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
 </head>
-<!-- --------------------------------Division Between Head and Body---------------------------------->
+<!-- ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~Division Between Head and Body~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ -->
 <body>
     <div id="wrapper">
         <header>
@@ -23,10 +23,11 @@
         </header>
         
         <article>
-            <section><p>There is text here</p></section>
+            <section><h1>Welcome To My Website</h1></section>
             <section><h5>wow so much text and body</h5></section>
         </article>
-
+        
+        <br><br><br>
         <footer>
             <nav> <!--Establish a navigation bar at the bottom of the website-->
                 <a class="button" href="aboutme.html">About Me</a>
