fifth commit, i think?

--- a/contact.html
+++ b/contact.html
@@ -41,7 +41,7 @@
             <p>
                 <label for="Phone">Phone Number:</label>
                 <input type="tel" name="Phone" size="40" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="(xxx-xxx-xxxx)"> <!-- the pattern field was taken from https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/input/tel-->
-
+                <!--How the above line works: It allows the user to enter their phone number, and validates that the number is formatted correctly by only allowing the input to be in the for xxx-xxx-xxxx, where x represents any numerical character-->
             </p>
             <p>
                 <label for="Comment">Comment:</label>
