--- a/projects.html
+++ b/projects.html
@@ -23,13 +23,13 @@
         </header>
         
         <article>
-            <section><h4>SHOOP, Object Oriented Programing in action</h4><p>She's on a bar hoppin' spree back in Sault Ste Marie</p><br></section>
+            <section><h4>SHOOP, Object Oriented Programing in Action</h4><p>SHOOP, a portmanteau of “shop” and “OOP (Object Oriented Programming)”, is an immensely scalable shopping experience developed in Python. It allows for users to shop through categories and items defined by an admin in an online storefront. This project demonstrates my aptitude for coding, as well as my creativity for design, as the GUI had to be made with text characters.</p><br></section>
 
-            <div class="sectionB"><h4>Gru - An Icon of Leadership</h4><p>Because of me she's now a fallen staaeeerr</p><br></div>
+            <div class="sectionB"><h4>Gru - An Icon of Leadership</h4><p>This project, completed in a group for Business Leadership, consists of an indepth analysis of the villainous character Gru from the film Despicable Me (2010). We examined the character through the lenses of different leadership styles, as learned in the course, to determine what style he exhibits best. This project reflects my ability to work well on a team, coordinating responsibilities and tasks, to create a wonderful end result. </p><br></div>
 
-            <section><h4>Project Three</h4><p>She could have been true, but I left her in the Sault</p><br></section>
+            <section><h4>The Three Games Blunder</h4><p>Alas, a tragic tale, yet one that demonstrates my hard-working attitude. The final project of Intro to Programming was to create one of three possible games. In my foolishness, I misunderstood the assignment, instead creating all three games in the time given. This goes to show that I have the capacity to go above and beyond what is expected of me.</p><br></section>
 
-            <div class="sectionB"><h4>Stan Rogers, Seldom Remembered</h4><p>And I travelled North upon the A.C.R.</p><br></div>
+            <div class="sectionB"><h4>Stan Rogers, Not One In Ten Thousand</h4><p>Though not a university project, I feel that this one is valuable to include, as it was the last project truly driven by passion. My final project of high-school was to create a video talking about the legendary Canadian folk singer Stan Rogers,describing both his life, and how his music perfectly captures the grandness of this fair country. Perfectly edited and well spoken, this project really demonstrates my love of showmanship and presentation.</p><br></div>
         </article>
         
         <br><br><br>
