--- a/aboutme.html
+++ b/aboutme.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Portfolio - About Me</title>
-    <link href="computer.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> <!--Links to different stylesheets depending on screen size-->
+    <link href="computer.css" rel="stylesheet" type="text/css" media="only screen and (min-width:961px)"> <!--Links to different stylesheets depending on screen size-->
     <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
     <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
 </head>
@@ -23,19 +23,21 @@
         </header>
         
         <article>
-            <section><p>There is text here</p></section>
-            <section><h5>wow so much text and body</h5></section>
+            <aside><img src="Nicholas.jpg"></aside>
+            <section><h4>But who IS Nicholas Skoric?</h4></section>
+            <section><p>wow so much text and body</p></section> 
+            <br>     
         </article>
+    
 
-        <br><br><br>
-        <footer>
+    </div>
+    <footer>
             <nav> <!--Establish a navigation bar at the top of the website-->
                 <a class="button" href="index.html">Home</a>
                 <a class="button" href="projects.html">Projects</a>
                 <a class="button" href="contact.html">Contact Me</a>
             </nav>
             <h4><br>Copyright @ Nicholas Skoric, 2025</h4>
-        </footer>
-    </div>
+    </footer>
 </body>
 </html>
