--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width">
     <title>Portfolio - Contact Me</title>
-    <link href="computer.css" rel="stylesheet" type="text/css" media="only screen and (min-width:960px)"> <!--Links to different stylesheets depending on screen size-->
+    <link href="computer.css" rel="stylesheet" type="text/css" media="only screen and (min-width:961px)"> <!--Links to different stylesheets depending on screen size-->
     <link href="tablet.css" rel="stylesheet" type="text/css" media="only screen and (min-width:481px) and (max-width:960px)">
     <link href="phone.css" rel="stylesheet" type="text/css" media="only screen and (max-width:480px)">
 </head>
@@ -27,29 +27,29 @@
             method="post" name="Contact Nicholas Skoric"> <!--Establish a form whose action is to send me an email containing input from user-->
             <p>
                 <br>
-                <label for="First Name">First Name:</label>
+                <label for="First Name">First Name:</label><br>
                 <input type="text" name="First Name" size="40" placeholder="Enter your first name" required>
             </p>
             <p>
-                <label for="Last Name">Last Name:</label>
+                <label for="Last Name">Last Name:</label><br>
                 <input type="text" name="Last Name" size="40" placeholder="Enter your last name" required>
             </p>
             <p>
-                <label for="Email">Email:</label>
-                <input type="email" name="Email" size="40" placeholder="Enter your email address" required>
+                <label for="Email Address">Email Address:</label><br>
+                <input type="email" name="Email Address" size="" placeholder="Enter your email address" required>
             </p>
             <p>
-                <label for="Phone">Phone Number:</label>
+                <label for="Phone">Phone Number:</label><br>
                 <input type="tel" name="Phone" size="40" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="(xxx-xxx-xxxx)"> <!-- the pattern field was taken from https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/input/tel-->
                 <!--How the above line works: It allows the user to enter their phone number, and validates that the number is formatted correctly by only allowing the input to be in the for xxx-xxx-xxxx, where x represents any numerical character-->
             </p>
             <p>
-                <label for="Comment">Comment:</label>
+                <label for="Comment">Comment:</label><br>
                 <textarea name="Comment" cols="60" rows="8"></textarea>
             </p>
             <p> <!--Probably will remove this before submission-->
                 <input type="checkbox" name="maillist">
-                <label for="maillist"> I consent to regular emails from Nicholas</label>
+                <label for="maillist">   I consent to regular emails from Nicholas</label>
             </p>
             <p>
                 <label for="where">How did you hear about me?</label>
@@ -69,9 +69,9 @@
         </form></section>
             <section><h5>Thank you for your comment! I'll be in touch with you shortly.</h5></section>
         </article>
-
-        <br><br><br><br>
-        <footer>
+        <br>
+    </div>
+    <footer>
             <nav> <!--Establish a navigation bar at the top of the website-->
                 <a class="button" href="index.html">Home</a>
                 <a class="button" href="aboutme.html">About Me</a>
@@ -79,6 +79,5 @@
             </nav>
             <h4><br>Copyright @ Nicholas Skoric, 2025</h4>
         </footer>
-    </div>
 </body>
 </html>
