--- a/index.html
+++ b/index.html
@@ -24,7 +24,11 @@
         
         <article>
             <section><h1>Welcome To My Website</h1></section>
-            <section><h5>wow so much text and body</h5></section>
+            <section><p>If you want to learn about who I am, check out the “About Me” page.</p></section>
+            <section><p>If you want to learn about some of the projects I have worked on, check out the “Projects” page.</p></section>
+            <section><p>If you have any questions or comments for me, send them over via the “Contact Me” page. </p></section>
+            <section><p>Thanks for slopping by</p></section>
+            <br>
         </article>
         
     </div>
@@ -34,7 +38,7 @@
                 <a class="button" href="projects.html">Projects</a>
                 <a class="button" href="contact.html">Contact Me</a>
             </nav>
-            <h4><br>Copyright @ Nicholas Skoric, 2025</h4>
+            <h4><br>Copyright @ Nicholas Skoric, nicholas.<wbr>skoric@<wbr>ontariotech<wbr>u.net, 2025</h4>
     </footer>
 </body>
 </html>
