--- a/projects.html
+++ b/projects.html
@@ -27,7 +27,7 @@
 
             <div class="sectionB"><h4>Gru - An Icon of Leadership</h4><p>This project, completed in a group for Business Leadership, consists of an indepth analysis of the villainous character Gru from the film Despicable Me (2010). We examined the character through the lenses of different leadership styles, as learned in the course, to determine what style he exhibits best. This project reflects my ability to work well on a team, coordinating responsibilities and tasks, to create a wonderful end result. </p><br></div>
 
-            <section><h4>The Three Games Blunder</h4><p>Alas, a tragic tale, yet one that demonstrates my hard-working attitude. The final project of Intro to Programming was to create one of three possible games. In my foolishness, I misunderstood the assignment, instead creating all three games in the time given. This goes to show that I have the capacity to go above and beyond what is expected of me.</p><br></section>
+            <section><h4>The Three Games Blunder</h4><p>Alas, a tragic tale, yet one that demonstrates my hard-working attitude. The final project of Intro to Programming was to create one of three possible games. In my foolishness, I misunderstood the assignment, instead creating all three games in the time given. This goes to show that I have the will and capacity to go above and beyond what is expected of me.</p><br></section>
 
             <div class="sectionB"><h4>Stan Rogers, Not One In Ten Thousand</h4><p>Though not a university project, I feel that this one is valuable to include, as it was the last project truly driven by passion. My final project of high-school was to create a video talking about the legendary Canadian folk singer Stan Rogers,describing both his life, and how his music perfectly captures the grandness of this fair country. Perfectly edited and well spoken, this project really demonstrates my love of showmanship and presentation.</p><br></div>
         </article>
@@ -39,7 +39,7 @@
                 <a class="button" href="aboutme.html">About Me</a>
                 <a class="button" href="contact.html">Contact Me</a>
             </nav>
-            <h4><br>Copyright @ Nicholas Skoric, 2025</h4>
+            <h4><br>Copyright @ Nicholas Skoric, nicholas.<wbr>skoric@<wbr>ontariotech<wbr>u.net, 2025</h4>
     </footer>
 </body>
 </html>
