--- a/aboutme.html
+++ b/aboutme.html
@@ -23,10 +23,20 @@
         </header>
         
         <article>
-            <aside><img src="Nicholas.jpg"></aside>
+            <aside><img src="Nicholas.jpg"><br>Pictured: Fool<br></aside>
             <section><h4>But who IS Nicholas Skoric?</h4></section>
-            <section><p>wow so much text and body</p></section> 
-            <br>     
+            <section><p>Hello! My name is Nicholas Skoric. I'm a second year student at Ontario Tech University in the Networking and IT Security program. I'm a hard working, attentive, detail oriented student, who always attempts his best at any challenge or assignment given. In my short time at Ontario Tech, I've completed numerous projects with the utmost care and effort, such as SHOOP and the Gru Analysis. If you want to hear more about those, check out my projects page! 
+                        <br><br>My real passion, however, isn't in the technology realm, but instead in history and music. In my free time, I enjoy researching local history, be that through online digital archives or physical books. I also love music, specifically authentic Canadian folk music, like that of Stan Rogers, James Gordon, or Stompin' Tom. I tend to wind down from university by playing along to such artists on my guitar or banjo.
+                        <br><br>After graduating I hope to land a stable, well paying job for Ontario Power Generation, perhaps as a networking technician or systems analyst. But it's a long road until then. In the meantime, I'll continue to plug away towards my degree, working hard yet still taking the time to sharpen the axe. If you would like to get in touch with me, head on over to the Contact Me page, and I'll respond as quickly as I can. Thanks!   
+                    </p> </section>  
+            <section>
+                <video id="video" width="65%" controls poster="Thumbnail.jpg" preload="auto">
+                    <source src="WebAndScriptVideo1.mp4" , type="video/mp4">
+                    <source src="WebAndScriptVideo1.ogv" , type="video/ogv">
+                    The video cannot play in this browser
+                </video>
+                <br><br><br><br><br>
+            </section>
         </article>
     
 
@@ -37,7 +47,7 @@
                 <a class="button" href="projects.html">Projects</a>
                 <a class="button" href="contact.html">Contact Me</a>
             </nav>
-            <h4><br>Copyright @ Nicholas Skoric, 2025</h4>
+            <h4><br>Copyright @ Nicholas Skoric, nicholas.<wbr>skoric@<wbr>ontariotech<wbr>u.net, 2025</h4>
     </footer>
 </body>
 </html>
