--- a/contact.html
+++ b/contact.html
@@ -49,7 +49,7 @@
             </p>
             <p> <!--Probably will remove this before submission-->
                 <input type="checkbox" name="maillist">
-                <label for="maillist">   I consent to regular emails from Nicholas</label>
+                <label for="maillist">I consent to regular emails from Nicholas</label>
             </p>
             <p>
                 <label for="where">How did you hear about me?</label>
@@ -77,7 +77,7 @@
                 <a class="button" href="aboutme.html">About Me</a>
                 <a class="button" href="projects.html">Projects</a>
             </nav>
-            <h4><br>Copyright @ Nicholas Skoric, 2025</h4>
+            <h4><br>Copyright @ Nicholas Skoric, nicholas.<wbr>skoric@<wbr>ontariotech<wbr>u.net, 2025</h4>
         </footer>
 </body>
 </html>
