--- a/index.html
+++ b/index.html
@@ -23,12 +23,14 @@
         </header>
         
         <article>
-            <section><h1>Welcome To My Website</h1></section>
-            <section><p>If you want to learn about who I am, check out the “About Me” page.</p></section>
-            <section><p>If you want to learn about some of the projects I have worked on, check out the “Projects” page.</p></section>
-            <section><p>If you have any questions or comments for me, send them over via the “Contact Me” page. </p></section>
-            <section><p>Thanks for slopping by</p></section>
-            <br>
+            <section><div id="welcome"><b>Welcome To My Website</b></div></section>
+            <ul>
+                <li><p>If you want to learn about who I am, check out the "About Me" page.</p></li>
+                <li><p>If you want to learn about some of the projects I have worked on, check out the "Projects" page.</p></li>
+                <li><p>If you have any questions or comments for me, send them over via the "Contact Me" page. </p></li>
+            </ul>
+            <section><div id="photo"><img src="WelcomeImage.jpg"></div></section>
+            <section><div id="h3b">Thanks for stopping by</div></section>
         </article>
         
     </div>
