--- a/projects.html
+++ b/projects.html
@@ -13,7 +13,6 @@
     <div id="wrapper">
         <header>
             <h1>Nicholas's Portfolio</h1>
-            <h4>~My Projects~</h4>
             <nav> <!--Establish a navigation bar at the top of the website-->
                 <a class="button" href="index.html">Home</a>
                 <a class="button" href="aboutme.html">About Me</a>
@@ -22,7 +21,7 @@
             
         </header>
         
-        <article>
+        <article> <h3>Projects</h3> <!--Main body of information on this page is presented through the semantic article tag-->
             <section><h4>SHOOP, Object Oriented Programing in Action</h4><p>SHOOP, a portmanteau of “shop” and “OOP (Object Oriented Programming)”, is an immensely scalable shopping experience developed in Python. It allows for users to shop through categories and items defined by an admin in an online storefront. This project demonstrates my aptitude for coding, as well as my creativity for design, as the GUI had to be made with text characters.</p><br></section>
 
             <div class="sectionB"><h4>Gru - An Icon of Leadership</h4><p>This project, completed in a group for Business Leadership, consists of an indepth analysis of the villainous character Gru from the film Despicable Me (2010). We examined the character through the lenses of different leadership styles, as learned in the course, to determine what style he exhibits best. This project reflects my ability to work well on a team, coordinating responsibilities and tasks, to create a wonderful end result. </p><br></div>
@@ -39,7 +38,7 @@
                 <a class="button" href="aboutme.html">About Me</a>
                 <a class="button" href="contact.html">Contact Me</a>
             </nav>
-            <h4><br>Copyright @ Nicholas Skoric, nicholas.<wbr>skoric@<wbr>ontariotech<wbr>u.net, 2025</h4>
+            <h4><br>Copyright @ Nicholas Skoric, nicholas.<wbr>skoric@<wbr>ontariotech<wbr>u.net, 2025</h4> <!--wbr tag breaks up the address if the screen cannot fit it, eg. on mobile devices-->
     </footer>
 </body>
 </html>
