--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,6 @@
     <div id="wrapper">
         <header>
             <h1>Nicholas's Portfolio</h1>
-            <h4>~Contact Me~</h4>
             <nav> <!--Establish a navigation bar at the top of the website-->
                 <a class="button" href="index.html">Home</a>
                 <a class="button" href="aboutme.html">About Me</a>
@@ -22,38 +21,39 @@
             
         </header>
         
-        <article>
-            <section><form action="mailto:nicholas.skoric@ontariotechu.net?subject=Web and Script Assignment 1 - Contact Form" enctype="text/plain"
+        <article> <h3>Contact Form</h3><!--Main body of information on this page is presented through the semantic article tag-->
+            <section><h2>Fill out this form to contact me</h2>
+        <form action="mailto:nicholas.skoric@ontariotechu.net?subject=WebAndScriptAssignment1-ContactForm" enctype="text/plain"
             method="post" name="Contact Nicholas Skoric"> <!--Establish a form whose action is to send me an email containing input from user-->
             <p>
                 <br>
-                <label for="First Name">First Name:</label><br>
-                <input type="text" name="First Name" size="40" placeholder="Enter your first name" required>
+                <label for="FirstName">First Name:</label><br> <!--First name is a requirement for sending me an email, as I must know who is sending me mail-->
+                <input id="FirstName" type="text" name="FirstName" size="40" placeholder="Enter your first name" required>
             </p>
             <p>
-                <label for="Last Name">Last Name:</label><br>
-                <input type="text" name="Last Name" size="40" placeholder="Enter your last name" required>
+                <label for="LastName">Last Name:</label><br> <!--Last name is a requirement for sending me an email, as I must know who is sending me mail-->
+                <input id="LastName" type="text" name="LastName" size="40" placeholder="Enter your last name" required>
             </p>
             <p>
-                <label for="Email Address">Email Address:</label><br>
-                <input type="email" name="Email Address" size="" placeholder="Enter your email address" required>
+                <label for="EmailAddress">Email Address:</label><br> <!--Email is also manditory, as the mail must be sent from some other address-->
+                <input id="EmailAddress" type="email" name="EmailAddress" placeholder="Enter your email address" required>
             </p>
             <p>
-                <label for="Phone">Phone Number:</label><br>
-                <input type="tel" name="Phone" size="40" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="(xxx-xxx-xxxx)"> <!-- the pattern field was taken from https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/input/tel-->
+                <label for="Phone">Phone Number:</label><br> <!--Phone number was mentioned in the rubric, so I included it here. Also checks to make sure phone number is valid structure-->
+                <input id="Phone" type="tel" name="Phone" size="40" pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" placeholder="(xxx-xxx-xxxx)"> <!-- the pattern field was taken from https://developer.mozilla.org/en-US/docs/Web/HTML/Reference/Elements/input/tel-->
                 <!--How the above line works: It allows the user to enter their phone number, and validates that the number is formatted correctly by only allowing the input to be in the for xxx-xxx-xxxx, where x represents any numerical character-->
             </p>
             <p>
-                <label for="Comment">Comment:</label><br>
-                <textarea name="Comment" cols="60" rows="8"></textarea>
+                <label for="Comment">Comment:</label><br> <!--Text area so that someone can actually send me a comment. This will be the body of the email sent-->
+                <textarea id="Comment" name="Comment" cols="60" rows="8"></textarea>
             </p>
-            <p> <!--Probably will remove this before submission-->
-                <input type="checkbox" name="maillist">
+            <p> <!--I thought this was funny, but it also shows that I know how to use checkboxes... or something-->
+                <input type="checkbox" id="maillist" name="maillist">
                 <label for="maillist">I consent to regular emails from Nicholas</label>
             </p>
             <p>
-                <label for="where">How did you hear about me?</label>
-                <select name="where">
+                <label for="where">How did you hear about me?</label> <!--This field was used once in an inclass example. Thought it would be good to have-->
+                <select id = "where" name="where">
                     <option value="Default">~Select One~</option>
                     <option value="Social">Spotted around the campus</option>
                     <option value="Mouth">Word of Mouth</option>
@@ -67,7 +67,8 @@
                 <input type="submit" value="Submit">
             </p>
         </form></section>
-            <section><h5>Thank you for your comment! I'll be in touch with you shortly.</h5></section>
+            <section><h5>Thank you for your comment! I'll be in touch with you shortly.</h5></section> <!-- yeah so.. uh.. I never could actually verify that the email function works. Everytime I tried it would just open a default google chrome tab. I dont have outlook, so I couldn't attemp to send it that way. From what I've learned in class, this SHOULD work-->
+            <br><br><br>
         </article>
         <br>
     </div>
@@ -77,7 +78,7 @@
                 <a class="button" href="aboutme.html">About Me</a>
                 <a class="button" href="projects.html">Projects</a>
             </nav>
-            <h4><br>Copyright @ Nicholas Skoric, nicholas.<wbr>skoric@<wbr>ontariotech<wbr>u.net, 2025</h4>
+            <h4><br>Copyright @ Nicholas Skoric, nicholas.<wbr>skoric@<wbr>ontariotech<wbr>u.net, 2025</h4> <!--wbr tag breaks up the address if the screen cannot fit it, eg. on mobile devices-->
         </footer>
 </body>
 </html>
